# scout-sync

./: .gitignore  Procfile  __init__.py  app.py  config.py  credentials.json  events.json  gc.token  main.py  pyproject.toml  requirement.txt  requirements.txt  scout_sync.cfg  scout_sync.py  sync.py
Google Apps Script/: scout_sync.gs
scout_sync/: __init__.py
scout_sync/app/: __init__.py  __main__.py  app.py
scout_sync/app/static/: editable_list.html  editable_list.js  game_list.html  list.html  list.js  script.js  static_list.html  static_list.js  style.css
scout_sync/app/templates/: game_list.html
scout_sync/app/web/: list.html  list.js  style.css
scout_sync/config/: __init__.py  scout_sync.cfg  scout_sync.cfg.template
scout_sync/sync/: __init__.py  __main__.py  google_api.py  nextcloud.py  sync.py
templates/: game_list.html
