[tool.poetry]
name = "scout-sync"
version = "2.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
google-api-python-client = "^2.70.0"
google-auth-oauthlib = "^0.8.0"
requests = "^2.28.1"
xds-protos = "^0.0.11"
arrow = "^1.2.3"
gunicorn = ""
APScheduler = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
