[tool.poetry]
name = "scout-sync"
version = "2.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "*"
Flask = "*"
google-api-python-client = "*"
google-auth-oauthlib = "*"
requests = "*"
xds-protos = "*"
arrow = "*"
gunicorn = "*"
APScheduler = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
